--- a/Problem 1/RichWebAppLab1Problem2.html
+++ b/Problem 1/RichWebAppLab1Problem2.html
@@ -13,7 +13,7 @@
     <div class="Edit_note">
       <h1>Take and Create Your Notes</h1>
       <div id="bigdiv">
-        <h2>Happy Note Taking</h2>
+        <h2>Happy Note Takin</h2>
         <div id="app">
           <button id="notestest" class="add-note" type="button">Create</button>   
         </div>
