Basic setup of Page

--- a/Problem 2/Countdown.html
+++ b/Problem 2/Countdown.html
@@ -9,5 +9,9 @@
     <link rel="stylesheet" href="Countdown.css">
 </head>
 <body>
-
+    <input type="number1" id="Hour" name="hour">
+    <p>:</p>
+    <input type="number2" id="Minutes" name="minutes">
+    <p>:</p>
+    <input type="number3" id="Seconds" name="seconds">
 </body>
