Fixed small bug I was giving input type an id

--- a/Problem 2/Countdown.html
+++ b/Problem 2/Countdown.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="Countdown.css">
 </head>
 <body>
-    <input type="number1" id="Hour" name="hour" placeholder="Hours">
+    <input type="number" id="Hour" name="hour" placeholder="Hours">
     <p>:</p>
-    <input type="number2" id="Minutes" name="minutes" placeholder="Minutes">
+    <input type="number" id="Minutes" name="minutes" placeholder="Minutes">
     <p>:</p>
-    <input type="number3" id="Seconds" name="seconds" placeholder="Seconds">
+    <input type="number" id="Seconds" name="seconds" placeholder="Seconds">
 </body>
