--- a/Problem 2/Countdown.html
+++ b/Problem 2/Countdown.html
@@ -14,4 +14,6 @@
     <input type="number" id="Minutes" name="minutes" placeholder="Minutes">
     <p>:</p>
     <input type="number" id="Seconds" name="seconds" placeholder="Seconds">
+
+    <script src="Countdown.js"></script>
 </body>
