Got seconds working in console log gonna fix now

--- a/Problem 2/Countdown.html
+++ b/Problem 2/Countdown.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://unpkg.com/rxjs@7.5.7/dist/bundles/rxjs.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/7.5.7/rxjs.umd.min.js"></script>
     <title>Countdown rxjs</title>
     <link rel="stylesheet" href="Countdown.css">
 </head>
@@ -14,6 +14,16 @@
     <input type="number" id="Minutes" name="minutes" placeholder="Minutes">
     <p>:</p>
     <input type="number" id="Seconds" name="seconds" placeholder="Seconds">
+
+    <div id="hoursDiv">
+
+    </div>
+    <div id="minutesDiv">
+        
+    </div>
+    <div id="secondsDiv">
+        
+    </div>
 
     <script src="Countdown.js"></script>
 </body>
