Got stuck did it in js will change to rxjs in morning am tired

--- a/Problem 2/Countdown.html
+++ b/Problem 2/Countdown.html
@@ -14,6 +14,11 @@
     <input type="number" id="Minutes" name="minutes" placeholder="Minutes">
     <p>:</p>
     <input type="number" id="Seconds" name="seconds" placeholder="Seconds">
+    <button id="submit">Start timer</button>
+
+    <div id="CountdownDiv">
+
+    </div>
 
     <div id="hoursDiv">
 
